<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Doozywhatsitz</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding an item</string>
    <string name="editor_activity_title_new_item">Add a Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_insert_item_failed">Error with saving item</string>
    <string name="editor_update_item_successful">Item updated</string>
    <string name="editor_update_item_failed">Error with updating item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_overview">Overview</string>
    <string name="category_size">Size</string>
    <string name="category_value">Value</string>
    <string name="category_quantity">Quantity</string>
    <string name="hint_item_name">Name</string>
    <string name="hint_item_type">Type</string>
    <string name="hint_item_value">Enter Value</string>
    <string name="hint_item_quantity">Enter Quantity</string>
    <string name="unit_item_price">dollars</string>
    <string name="item_unknown">Unknown</string>
    <string name="item_large">Large</string>
    <string name="item_small">Small</string>
    <string name="unknown_item">Unknown Item</string>
    <string name="value_zero">0</string>
    <string name="invalid_entry">Please create a valid item</string>
    <string name="details">Item Info</string>
    <string name="order">Order</string>
    <string name="minus"> - </string>
    <string name="plus"> + </string>
    <string name="update_quantity">Update Quantity</string>
    <string name="sale">Sell Item</string>
</resources>
